--- a/0x01-react_intro/task_0/dashboard/src/App.css
+++ b/0x01-react_intro/task_0/dashboard/src/App.css
@@ -1,12 +1,23 @@
+:root {
+	--border-bottom: 4px solid #e1003c;
+	--padding: 1.2em;
+	--heading-font-size: 1.4rem;
+	--general-font-size: 1rem;
+}
+
 .App {
 	height: 100vh;
 	max-width: 100vw;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-header {
+	font-size: var(--heading-font-size);
+	color: #e1003c;
 	display: flex;
 	align-items: center;
-	border-bottom: 0.3rem solid #e1003c;
+	padding: var(--padding);
+	border-bottom: var(--border-bottom);
 }
 
 .App-header img {
@@ -14,19 +25,16 @@
 	height: 250px;
 }
 
-.App-header h1 {
-	color: #e1003c;
-}
-
 .App-body {
+	font-size: var(--general-font-size);
+	padding: calc(var(--padding) * 2);
+	border-bottom: var(--border-bottom);
 	height: 45%;
-	font-size: 1rem;
-	padding: 2rem 0 0 2rem;
-	border-bottom: 0.3rem solid #e1003c;
 }
 
 .App-footer {
+	font-size: var(--general-font-size);
+	padding: var(--padding);
 	text-align: center;
-	font-size: 1rem;
 	font-style: italic;
 }
