--- a/0x01-react_intro/task_1/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_1/dashboard/src/Notifications.css
@@ -1,4 +1,5 @@
 .Notifications {
-	border: 0.3rem solid #e1003c;
-	padding: 2rem;
+	padding: 2em;
+	border: 2px solid #e1003c;
+	font-family: Arial, Helvetica, sans-serif;
 }
