--- a/0x01-react_intro/task_1/dashboard/src/App.css
+++ b/0x01-react_intro/task_1/dashboard/src/App.css
@@ -1,16 +1,19 @@
+:root {
+	--border-bottom: 4px solid #e1003c;
+	--padding: 1.2em;
+	--heading-font-size: 1.4rem;
+	--general-font-size: 1rem;
+}
+
 .App {
 	height: 100vh;
 	max-width: 100vw;
-	--border-bottom: 4px solid #E0354B;
-	--padding: 1.2em;
-	--heading-font-size: 1.4rem;
-	--gen-font-size: 1rem;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-header {
 	font-size: var(--heading-font-size);
-	color: #E0354B;
+	color: #e1003c;
 	display: flex;
 	align-items: center;
 	padding: var(--padding);
@@ -23,14 +26,14 @@
 }
 
 .App-body {
-	font-size: var(--gen-font-size);
+	font-size: var(--general-font-size);
 	padding: calc(var(--padding) * 2);
 	border-bottom: var(--border-bottom);
 	height: 45%;
 }
 
 .App-footer {
-	font-size: var(--gen-font-size);
+	font-size: var(--general-font-size);
 	padding: var(--padding);
 	text-align: center;
 	font-style: italic;
